# render-engine-themes-template

./: README.md  abbreviations.json  cookiecutter.json  post_template_build.py  pyproject.toml
docs/: app.py
render_engine_<project_name>/: __init__.py  theme.py
render_engine_<project_name>/{{cookiecutter.project_name}}/templates/: template.html
src/render_engine_<project_name>/templates/: template.html
{{cookiecutter._project}}/: README.md
{{cookiecutter.project_name}}/: README.md  pyproject.toml
{{cookiecutter.project_name}}/.github/docs/: app.py
{{cookiecutter.project_name}}/docs/: app.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/: template.html  {{cookiecutter._theme_name}}.py
