[build-system]
requires = ["setuptools", "setuptools_scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "render-engine-<INSTALLABLE_NAME>"
dynamic = ["version"]
description = "<DESCRIPTION>"
readme = "README.md"

dependencies = [
    "jinja2",
    "render-engine",
    # Include any other dependencies here
    ]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    ]

[tool.setuptools_scm]
local_scheme = "no-local-version"

[project.urls]
homepage = "https://github.com/<AUTHOR>/<PROJECT_NAME>"
repository = "https://github.com/<AUTHOR>/<PROJECT_NAME>"
documentation = "https://github.io/<AUTHOR>/<PROJECT_NAME>"

[tool.semantic_release]
version_toml = "pyproject.toml:project.version"
branch = "main"

[tool.ruff]
select = ["E", "F", "I", "UP"]
target-version = "py311"
line-length = 120
ignore-init-module-imports = true

[tool.black]
target-version =  ["py311"]
line-length = 120
